--- a/src/main/resources/common/security.properties
+++ b/src/main/resources/common/security.properties
@@ -25,7 +25,9 @@ security.server.channelType=REQUIRES_INSECURE_CHANNEL
 # external services.
 #
 # This is configured during install.  If blank, discovers an IP address
-security.server.hostname=sprite.cs.washington.edu
+#security.server.hostname=msundt-test.appspot.com
+security.server.hostname=sprite.dyn.cs.washington.edu
+#security.server.hostname=clarlars.appspot.com
 #
 # any port pairings can be used.
 #security.server.port=80
