--- a/src/main/resources/common/security.properties
+++ b/src/main/resources/common/security.properties
@@ -26,7 +26,8 @@ security.server.channelType=REQUIRES_INSECURE_CHANNEL
 #
 # This is configured during install.  If blank, discovers an IP address
 #security.server.hostname=msundt-test.appspot.com
-security.server.hostname=sprite.dyn.cs.washington.edu
+security.server.hostname=128.208.6.81
+#security.server.hostname=sprite.dyn.cs.washington.edu
 #security.server.hostname=clarlars.appspot.com
 #
 # any port pairings can be used.
@@ -35,7 +36,7 @@ security.server.hostname=sprite.dyn.cs.washington.edu
 security.server.port=8888
 security.server.securePort=8443
 
-wink.handlersFactoryClass=org.opendatakit.aggregate.odktables.impl.api.AppEngineHandlersFactory
+wink.handlersFactoryClass=org.opendatakit.aggregate.odktables.impl.api.wink.AppEngineHandlersFactory
 
 # e-mail of designated superuser. This must be a user that has an OpenID
 # login hosted by a remote server (i.e., this must be a gmail account).
