Do a hacked port of a collection of files from ODK Sync for potential use as an ODK Tables sync testbed (not presently in use).

--- a/aggregate-mysql/pom.xml
+++ b/aggregate-mysql/pom.xml
@@ -24,6 +24,12 @@
       <artifactId>odk-mysql-it-settings</artifactId>
       <version>latest</version>
     </dependency>
+    <dependency>
+        <groupId>org.apache.wink</groupId>
+        <artifactId>wink-client</artifactId>
+        <version>1.4</version>
+        <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <testSourceDirectory>${toplevel.directory}/src/it/java</testSourceDirectory>
