--- a/aggregate-postgres/pom.xml
+++ b/aggregate-postgres/pom.xml
@@ -11,7 +11,7 @@
   <packaging>war</packaging>
   <name>ODK Aggregate for PostgreSQL</name>
   <properties>
-	<test.server.baseUrl>/${project.artifactId}/</test.server.baseUrl>
+    <test.server.baseUrl>/${project.artifactId}/</test.server.baseUrl>
   </properties>
   <dependencies>
     <dependency>
@@ -24,151 +24,157 @@
       <artifactId>odk-postgres-it-settings</artifactId>
       <version>latest</version>
     </dependency>
+    <dependency>
+        <groupId>org.apache.wink</groupId>
+        <artifactId>wink-client</artifactId>
+        <version>1.4</version>
+        <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <testSourceDirectory>${toplevel.directory}/src/it/java</testSourceDirectory>
     <testResources>
-		<testResource>
-			<directory>${toplevel.directory}/src/it/java</directory>
-			<filtering>true</filtering>
-			<includes>
-				<include>**/*.properties</include>
-			</includes>
-		</testResource>
-	</testResources>
+        <testResource>
+            <directory>${toplevel.directory}/src/it/java</directory>
+            <filtering>true</filtering>
+            <includes>
+                <include>**/*.properties</include>
+            </includes>
+        </testResource>
+    </testResources>
     <plugins>
-		<plugin>
-			<groupId>org.codehaus.mojo</groupId>
-			<artifactId>build-helper-maven-plugin</artifactId>
-			<executions>
-				<execution>
-					<id>add-java-source</id>
-				</execution>
-			</executions>
-		</plugin>
-		<plugin>
-			<groupId>org.codehaus.mojo</groupId>
-			<artifactId>gwt-maven-plugin</artifactId>
-			<executions>
-			  <execution>
-				<id>gwt-javascript</id>
-			  </execution>
-			</executions>
-		</plugin>
-		<plugin>
-			<artifactId>maven-antrun-plugin</artifactId>
-			<executions>
-				<execution>
-					<id>war-clean</id>
-					<phase>pre-clean</phase>
-				</execution>
-				<execution>
-					<id>war-prep</id>
-					<phase>generate-resources</phase>
-				</execution>
-				<execution>
-					<id>war-remove-classes</id>
-					<phase>prepare-package</phase>
-				</execution>
-				<execution>
-					<id>prepare-instrumented-war-folder</id>
-					<phase>pre-integration-test</phase>
-				</execution>
-				<execution>
-					<id>add-emma-to-war-folder</id>
-					<phase>pre-integration-test</phase>
-				</execution>
-				<execution>
-					<id>prepare-instrumented-war</id>
-					<phase>pre-integration-test</phase>
-				</execution>
-			</executions>
-		</plugin>
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-war-plugin</artifactId>
-			<executions>
-			  <execution>
-				<id>war-build</id>
-				<phase>package</phase>
-			  </execution>
-			</executions>
-		</plugin>
-		<plugin>
-			<!--  This references the emma plugin, configuration is in the parent -->
-			<groupId>org.sonatype.maven.plugin</groupId>
-			<artifactId>emma-maven-plugin</artifactId>
-		</plugin>
-		<plugin>
-			<groupId>org.codehaus.mojo</groupId>
-			<artifactId>tomcat-maven-plugin</artifactId>
-			<version>1.1</version>
-		</plugin>
-		<plugin>
-		  <!-- This configures the running of odktables integration tests. -->
-		  <artifactId>maven-surefire-plugin</artifactId>
-		  <version>${maven.surefire.plugin.version}</version>
-		  <inherited>true</inherited>
-		  <configuration>
-			<argLine>${surefire.argLine}</argLine>
-			<skipTests>true</skipTests>
-			<classesDirectory>${project.build.directory}/generated-classes/emma/classes</classesDirectory>
-			<excludes>
-			  <exclude>**/integration/**</exclude>
-			</excludes>
-		  </configuration>
-		</plugin>
-		<plugin>
-			<artifactId>maven-failsafe-plugin</artifactId>
-			<executions>
-			  <execution>
-				<id>integration-test</id>
-			  </execution>
-			  <execution>
-				<id>verify</id>
-			  </execution>
-			</executions>
-		</plugin>
-		<plugin>
-			<groupId>org.codehaus.cargo</groupId>
-			<artifactId>cargo-maven2-plugin</artifactId>
-			<executions>
-			  <execution>
-				<id>start-container</id>
-			  </execution>
-			  <execution>
-				<id>stop-container</id>
-			  </execution>
-			</executions>
-		</plugin>
-		<plugin>
-			<groupId>org.codehaus.mojo</groupId>
-			<artifactId>selenium-maven-plugin</artifactId>
-			<executions>
-			  <execution>
-				<id>start-selenium</id>
-			  </execution>
-			  <execution>
-				<id>stop-selenium</id>
-			  </execution>
-			</executions>
-		</plugin>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <executions>
+                <execution>
+                    <id>add-java-source</id>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>gwt-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>gwt-javascript</id>
+              </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+                <execution>
+                    <id>war-clean</id>
+                    <phase>pre-clean</phase>
+                </execution>
+                <execution>
+                    <id>war-prep</id>
+                    <phase>generate-resources</phase>
+                </execution>
+                <execution>
+                    <id>war-remove-classes</id>
+                    <phase>prepare-package</phase>
+                </execution>
+                <execution>
+                    <id>prepare-instrumented-war-folder</id>
+                    <phase>pre-integration-test</phase>
+                </execution>
+                <execution>
+                    <id>add-emma-to-war-folder</id>
+                    <phase>pre-integration-test</phase>
+                </execution>
+                <execution>
+                    <id>prepare-instrumented-war</id>
+                    <phase>pre-integration-test</phase>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>war-build</id>
+                <phase>package</phase>
+              </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <!--  This references the emma plugin, configuration is in the parent -->
+            <groupId>org.sonatype.maven.plugin</groupId>
+            <artifactId>emma-maven-plugin</artifactId>
+        </plugin>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>tomcat-maven-plugin</artifactId>
+            <version>1.1</version>
+        </plugin>
+        <plugin>
+          <!-- This configures the running of odktables integration tests. -->
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven.surefire.plugin.version}</version>
+          <inherited>true</inherited>
+          <configuration>
+            <argLine>${surefire.argLine}</argLine>
+            <skipTests>true</skipTests>
+            <classesDirectory>${project.build.directory}/generated-classes/emma/classes</classesDirectory>
+            <excludes>
+              <exclude>**/integration/**</exclude>
+            </excludes>
+          </configuration>
+        </plugin>
+        <plugin>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>integration-test</id>
+              </execution>
+              <execution>
+                <id>verify</id>
+              </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.codehaus.cargo</groupId>
+            <artifactId>cargo-maven2-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>start-container</id>
+              </execution>
+              <execution>
+                <id>stop-container</id>
+              </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>selenium-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>start-selenium</id>
+              </execution>
+              <execution>
+                <id>stop-selenium</id>
+              </execution>
+            </executions>
+        </plugin>
     </plugins>
  </build>
-	<reporting>
-		<plugins>
-		  <plugin>
-			<groupId>org.sonatype.maven.plugin</groupId>
-			<artifactId>emma-maven-plugin</artifactId>
-			<version>${emma.maven.plugin.version}</version>
-			<inherited>true</inherited>
-		  </plugin>
-		  <plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-surefire-report-plugin</artifactId>
-			<version>${maven.surefire.report.plugin.version}</version>
-			<inherited>true</inherited>
-		  </plugin>
-		</plugins>
-	</reporting>
+    <reporting>
+        <plugins>
+          <plugin>
+            <groupId>org.sonatype.maven.plugin</groupId>
+            <artifactId>emma-maven-plugin</artifactId>
+            <version>${emma.maven.plugin.version}</version>
+            <inherited>true</inherited>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-report-plugin</artifactId>
+            <version>${maven.surefire.report.plugin.version}</version>
+            <inherited>true</inherited>
+          </plugin>
+        </plugins>
+    </reporting>
 </project>
