--- a/aggregate-gae/pom.xml
+++ b/aggregate-gae/pom.xml
@@ -25,6 +25,12 @@
       <artifactId>odk-gae-it-settings</artifactId>
       <version>latest</version>
     </dependency>
+    <dependency>
+        <groupId>org.apache.wink</groupId>
+        <artifactId>wink-client</artifactId>
+        <version>1.4</version>
+        <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <testSourceDirectory>${toplevel.directory}/src/it/java</testSourceDirectory>
