Fix Google Spreadsheets publisher. Updates to GWT 2.7 and JR library with OpenStreetMap extensions.

--- a/src/main/resources/common/security.properties
+++ b/src/main/resources/common/security.properties
@@ -25,8 +25,8 @@ security.server.channelType=REQUIRES_INSECURE_CHANNEL
 # external services.
 #
 # This is configured during install.  If blank, discovers an IP address
-#security.server.hostname=msundt-test.appspot.com
-security.server.hostname=128.208.6.81
+#security.server.hostname=msundt-agg-test2.appspot.com
+security.server.hostname=128.208.7.158
 #security.server.hostname=sprite.dyn.cs.washington.edu
 #security.server.hostname=clarlars.appspot.com
 #
